Added event handling based on DB table, cut mq off